# devhub

./: .gitignore  AGENTS.md  README.md  eslint.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
sidecar/: package.json  tsconfig.json
sidecar/src/: agent-registry.ts  driver-loader.ts  index.ts
sidecar/src/adapters/: claude.ts  opencode.ts
sidecar/src/drivers/: claude.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/commands/: agent.rs  driver.rs  mcp.rs  mod.rs  project.rs  resource.rs  skill.rs
src-tauri/src/db/: mod.rs
src-tauri/src/db/migrations/: 001_init.sql
src-tauri/src/services/: docker.rs  file_watcher.rs  mod.rs  port_scanner.rs  process.rs  sidecar.rs
src/components/layout/: app-shell.tsx  project-tabs.tsx  sidebar.tsx  status-bar.tsx
src/components/projects/: add-project-dialog.tsx  add-resource-dialog.tsx  agents-pane.tsx  code-pane.tsx  delete-project-dialog.tsx  (+9 more)
src/errors/: index.ts  registry.ts
src/hooks/: useAgentSession.ts  useProject.ts  useProjectWatcher.ts  useRegistry.ts  useResourceStatus.ts
src/lib/: agent-registry.ts  claude.ts  logger.ts  opencode.ts  tauri.ts  utils.ts
src/stores/: agents.store.ts  mcp.store.ts  projects.store.ts  registry.store.ts  resources.store.ts  skills.store.ts
src/types/: agent-driver.ts  agent.ts  mcp.ts  project.ts  resource.ts  skill.ts
tasks/: 10-testing.md  11-ci.md  12-agent-drivers.md
(+8 files in other folders)
