[package]
name = "devhub"
version = "0.1.0"
description = "DevHub — Developer Control Plane"
authors = ["you"]
edition = "2021"

[lib]
name = "devhub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
rusqlite_migration = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "1"
notify = "6"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
once_cell = "1"
